--- a/week2/style.css
+++ b/week2/style.css
@@ -5,3 +5,11 @@ body{
 img{
     max-width: 100%;
 }
+
+/* NAVIGATION BAR */
+
+header nav ul{
+    list-style: none;
+    margin:0;
+    padding: 0;
+}
