--- a/week2/style.css
+++ b/week2/style.css
@@ -1,5 +1,6 @@
 body{
     margin:0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img{
@@ -17,6 +18,8 @@ header nav ul{
 header nav li{
     padding:10px;
     background-color: rgb(245, 180, 180);
+    font-size: 15px;
+    border-bottom: : 2px solid #2121121;
 }
 
 header nav a{
