--- a/week2/style.css
+++ b/week2/style.css
@@ -109,10 +109,11 @@ section {
         display:flex;
         background-color: rgb(255, 255, 222);
     }
-    #home p class{
+    #home h1{
         order :+2;
     }
-    
+
+
     #about{
         background-color: rgb(221, 223, 255);
     }
@@ -157,7 +158,7 @@ section {
     }
     h1 {
         font-size: 2rem;
-        color: #453535;
+        color: #683c3c;
     }
     h1 {
         color: #124133; 
