--- a/week2/style.css
+++ b/week2/style.css
@@ -50,7 +50,7 @@ section {
 }
 
 /* MOBILE VIEW  */
-@media(max-width: 767px) {
+@media(min-width: 375px) {
     body {
         background-color: #a4d5ff;
         font-family: 'Verdana', sans-serif; 
@@ -76,7 +76,7 @@ section {
 }
 
 /* TABLET VIEW  */
-@media(min-width: 768px) and (max-width: 1023px) {
+@media(min-width: 768px) {
     body {
         font-family: 'Tahoma', sans-serif; 
         background-color: #c0f8ff;
