--- a/week3/style.css
+++ b/week3/style.css
@@ -1,9 +1,18 @@
 body{
     margin:0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(188, 255, 234);
     
     
 }
+
+h1 {
+    color: rgb(22, 65, 61); 
+    text-align: center;
+    background-color:rgb(255, 212, 231);
+    padding: 10px;
+}
+
 
 img{
     max-width: 70%;
@@ -14,4 +23,27 @@ img{
 
 #DOMoptions{
     background-color: lightskyblue;
+}
+
+/* style.css */
+#thumbnailGallery {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.thumbnail {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
+}
+
+#imageDisplay {
+    display: flex;
+    justify-content: center;
+}
+
+#largeImage {
+    width: 500px;
+    height: auto;
 }
