--- a/week5assignment/style.css
+++ b/week5assignment/style.css
@@ -1,12 +1,58 @@
 html,
 body{
-    height: 100%
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(178, 240, 220);
 }
 
 body, main{
     margin:0px;
     display:flex;
+    justify-content: center;
     
+}
+
+main {
+    display:flex;
+    flex-wrap: wrap; 
     justify-content: center;
     align-content: center;
+    width: 100%;
+    padding: 40px;
+    flex-direction:column;
+    
+}
+
+.step {
+    width: 25%;
+    height: auto;
+    margin-bottom: 15px;
+    
+    text-align: center;
+    box-sizing: border-box; 
+    justify-content: center;
+    
+}
+
+.step img {
+    width: 225px;
+    height: auto;
+}
+
+.step p {
+    width:290px;
+    margin-top: 5px;
+    font-size: 16px;
+    color: #333;
+    
+    flex-wrap: wrap;
+    text-align:left;
+}
+
+.canvas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    
 }
